force-app/main/default/objects/Document_File_References__c.object
<CustomObject>
    <label>Document File References</label>
    <nameField>
        <displayFormat>DFR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document File References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>