force-app/main/default/objects/Document_File_References__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>