force-app/main/default/objects/Document_File_References__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <formula>text(Enrollment_Document__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>