force-app/main/default/objects/Document_File_References__c/fields/Enrollment_Document__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Document__c</fullName>
    <label>Enrollment Document</label>
    <referenceTo>Enrollment_Document__c</referenceTo>
    <relationshipLabel>Document File References</relationshipLabel>
    <relationshipName>Document_File_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>