force-app/main/default/objects/Document_File_References__c/listViews/New_list.listView-meta.xml
<ListView>
    <fullName>New_list</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>File_Path__c</columns>
    <columns>Date_Uploaded__c</columns>
    <filterScope>Everything</filterScope>
    <label>New List</label>
</ListView>